syntax = "proto3";
package common;

message Uuid { string value = 1; }  // v7 in formato stringa

message OrderItem {
  string sku = 1;
  int32 quantity = 2;
  double unitPrice = 3; // opzionale in input; valorizzato da Pricing
}

message Order {
  Uuid orderId = 1;
  string customerId = 2;
  repeated OrderItem items = 3;
}

message PricedOrder {
  Order order = 1;
  double subtotal = 2;
  double tax = 3;
  double total = 4;
}

message ReservationResult {
  Order order = 1;
  bool reserved = 2;
  string reason = 3;
}
